package pt.ipp.isep.dei.esoft.project.domain;

public class Store {
    String ID;
    String designation;
    Location location;
    String emailAddress;
    String phoneNumber;
}
