package pt.ipp.isep.dei.esoft.project.domain;

public class StoreManager {

    //newState()
    //newDistrict()
    //newCity()
    //newEmployee()
    //newStore()

}
