package pt.ipp.isep.dei.esoft.project.domain;

public class TaxNumber {
    private int taxNumber;

    public int getTaxNumber() {
        return taxNumber;
    }
    public void setTaxNumber(int taxNumber) {
        this.taxNumber = taxNumber;
    }
}